# transactions-classifier

./: README.md  classifier.py  endpoint.py  local.env  models.py  pyproject.toml  routes.py
data/: 25000_spend_dataset_current.csv
src/: classifier.py  routes.py
