[tool.poetry]
name = "transactions-classifier"
version = "0.1.0"
description = "Classifying transactions using OpenAI API"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = {extras = ["embeddings"], version = "^1.33.0"}
transformers = "^4.41.2"
pandas = "^2.2.2"
numpy = "^1.26.4"
scikit-learn = "^1.5.0"
torch = "^2.3.1"
matplotlib = "^3.9.0"
plotly = "^5.22.0"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
pydantic-settings = "^2.3.3"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
